# Crockits

./: Documento de Especificación Crockits.docx  README.md
Crockits Carpeta de Juego/: CMakeLists.txt  Dino.h  Escenario.h  Puntuaciones.txt  Thumbs.db  main.cpp
Juego Crockits/: CMakeLists.txt  Crockit.cpp  Crockit.h  Dino.cpp  Dino.h  Escenario.cpp  Escenario.h  LinkedList.h  Municion.cpp  Municion.h  main.cpp
Juego Crockits/Assets/: Puntuaciones.txt  Thumbs.db
